Switch from RANKCOLOR to RANK melds

--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -34,16 +34,16 @@
     }
    ],
    "source": [
-    "    logging.basicConfig(format='%(levelname)s: %(message)s', level=logging.DEBUG)\n",
-    "    g = handnfoot.HNFGame()\n",
-    "    g.add_player(cardtable.Player(\"J\", precision=5, speed=1.2), handnfoot.Strategy())\n",
-    "    g.add_player(cardtable.Player(\"S\", precision=10, speed=1), handnfoot.Strategy())\n",
-    "    g.add_player(cardtable.Player(\"L\", precision=7, speed=1), handnfoot.Strategy())\n",
-    "    g.add_player(cardtable.Player(\"A\", precision=15, speed=.9), handnfoot.Strategy())\n",
-    "    #g.game_setup()\n",
-    "    #g.round_setup()\n",
-    "    g.start()\n",
-    "    #g.display()"
+    "logging.basicConfig(format='%(levelname)s: %(message)s', level=logging.DEBUG)\n",
+    "g = handnfoot.HNFGame()\n",
+    "g.add_player(cardtable.Player(\"J\", precision=5, speed=1.2), handnfoot.Strategy())\n",
+    "g.add_player(cardtable.Player(\"S\", precision=10, speed=1), handnfoot.Strategy())\n",
+    "g.add_player(cardtable.Player(\"L\", precision=7, speed=1), handnfoot.Strategy())\n",
+    "g.add_player(cardtable.Player(\"A\", precision=15, speed=.9), handnfoot.Strategy())\n",
+    "#g.game_setup()\n",
+    "#g.round_setup()\n",
+    "g.start()\n",
+    "#g.display()"
    ]
   },
   {
@@ -55,55 +55,45 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [TD[6C]\n",
-      "DEBUG: Player J discards 2S leaving [3D[4H[5D[6C[6C[7C[JC[JC[QH[TD[TH[TD]\n",
-      "DEBUG: Player J draws [2D[6S]\n",
-      "DEBUG: Player J discards 2D leaving [3D[4H[5D[6C[6C[6S[7C[JC[JC[QH[TD[TH[TD]\n",
-      "DEBUG: Player J draws [5D[4C]\n",
-      "DEBUG: Player J discards 3D leaving [4C[4H[5D[5D[6C[6C[6S[7C[JC[JC[QH[TD[TH[TD]\n",
-      "DEBUG: Player J draws [9D[4S]\n",
-      "DEBUG: Player J discards 4H leaving [4C[4S[5D[5D[6C[6C[6S[7C[9D[JC[JC[QH[TD[TH[TD]\n",
-      "DEBUG: Player J draws [JH[9H]\n",
-      "DEBUG: Player J discards 7C leaving [4C[4S[5D[5D[6C[6C[6S[9D[9H[JC[JC[JH[QH[TD[TH[TD]\n",
-      "DEBUG: Player J draws [9H[TD]\n",
-      "DEBUG: Player J lays down [6C[6C[6S]\n",
-      "DEBUG: Player J lays down [9D[9H[9H]\n",
-      "DEBUG: Player J lays down [TD[TH[TD[TD]\n",
-      "DEBUG: Player J discards JH leaving [4C[4S[5D[5D[JC[JC[QH]\n",
-      "DEBUG: Player J draws [QS[9D]\n",
+      "DEBUG: Player J draws [AS[9C]\n",
+      "DEBUG: Player J lays down [2S[2D[2S]\n",
+      "DEBUG: Player J lays down [8S[8D[8C]\n",
+      "DEBUG: Player J discards *R leaving [4S[9H[9C[AS[KD[QH]\n",
+      "DEBUG: Player J draws [9D[5H]\n",
+      "DEBUG: Player J lays down [9H[9C[9D]\n",
+      "DEBUG: Player J discards 4S leaving [5H[AS[KD[QH]\n",
+      "DEBUG: Player J draws [KC[*B]\n",
+      "DEBUG: Player J discards *B leaving [5H[AS[KD[KC[QH]\n",
+      "DEBUG: Player J draws [9S[7H]\n",
+      "DEBUG: Player J lays down [9S]\n",
+      "DEBUG: Player J discards 5H leaving [7H[AS[KD[KC[QH]\n",
+      "DEBUG: Player J draws [5S[7H]\n",
+      "DEBUG: Player J discards 5S leaving [7H[7H[AS[KD[KC[QH]\n",
+      "DEBUG: Player J draws [8C[TS]\n",
+      "DEBUG: Player J lays down [8C]\n",
+      "DEBUG: Player J discards AS leaving [7H[7H[KD[KC[QH[TS]\n",
+      "DEBUG: Player J draws [TD[AH]\n",
+      "DEBUG: Player J discards AH leaving [7H[7H[KD[KC[QH[TS[TD]\n",
+      "DEBUG: Player J draws [6C[JD]\n",
+      "DEBUG: Player J discards 6C leaving [7H[7H[JD[KD[KC[QH[TS[TD]\n",
+      "DEBUG: Player J draws [*R[6C]\n",
+      "DEBUG: Player J discards *R leaving [6C[7H[7H[JD[KD[KC[QH[TS[TD]\n",
+      "DEBUG: Player J draws [7C[7C]\n",
+      "DEBUG: Player J lays down [7H[7H[7C[7C]\n",
+      "DEBUG: Player J discards 6C leaving [JD[KD[KC[QH[TS[TD]\n",
+      "DEBUG: Player J draws [7S[7D]\n",
+      "DEBUG: Player J lays down [7S[7D]\n",
+      "DEBUG: Player J discards JD leaving [KD[KC[QH[TS[TD]\n",
+      "DEBUG: Player J draws [JC[JS]\n",
+      "DEBUG: Player J discards QH leaving [JC[JS[KD[KC[TS[TD]\n",
+      "DEBUG: Player J draws [KS[7S]\n",
+      "DEBUG: Player J lays down [7S]\n",
+      "DEBUG: Player J added [7H[7H[7C[7C[7S[7D[7S] to a pile\n",
+      "DEBUG: Player J lays down [KD[KC[KS]\n",
+      "DEBUG: Player J discards JC leaving [JS[TS[TD]\n",
+      "DEBUG: Player J draws [9D[AS]\n",
       "DEBUG: Player J lays down [9D]\n",
-      "DEBUG: Player J discards QS leaving [4C[4S[5D[5D[JC[JC[QH]\n",
-      "DEBUG: Player J draws [3C[3S]\n",
-      "DEBUG: Player J discards QH leaving [3C[3S[4C[4S[5D[5D[JC[JC]\n",
-      "DEBUG: Player J draws [KD[TC]\n",
-      "DEBUG: Player J discards KD leaving [3C[3S[4C[4S[5D[5D[JC[JC[TC]\n",
-      "DEBUG: Player J draws [AS[6H]\n",
-      "DEBUG: Player J discards 6H leaving [3C[3S[4C[4S[5D[5D[AS[JC[JC[TC]\n",
-      "DEBUG: Player J draws [5C[AD]\n",
-      "DEBUG: Player J discards 5C leaving [3C[3S[4C[4S[5D[5D[AS[AD[JC[JC[TC]\n",
-      "DEBUG: Player J draws [8C[5S]\n",
-      "DEBUG: Player J discards 5S leaving [3C[3S[4C[4S[5D[5D[8C[AS[AD[JC[JC[TC]\n",
-      "DEBUG: Player J draws [TS[4S]\n",
-      "DEBUG: Player J lays down [4C[4S[4S]\n",
-      "DEBUG: Player J discards 8C leaving [3C[3S[5D[5D[AS[AD[JC[JC[TC[TS]\n",
-      "DEBUG: Player J draws [8C[8S]\n",
-      "DEBUG: Player J discards AS leaving [3C[3S[5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
-      "DEBUG: Player J draws [2S[2D]\n",
-      "DEBUG: Player J discards 2S leaving [2D[3C[3S[5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
-      "DEBUG: Player J draws [3C[TH]\n",
-      "DEBUG: Player J lays down [3C[3S[3C]\n",
-      "DEBUG: Player J lays down [TH]\n",
-      "DEBUG: Player J discards 2D leaving [5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
-      "DEBUG: Player J draws [*R[*B]\n",
-      "DEBUG: Player J discards *B leaving [*R[5D[5D[8C[8S[AD[JC[JC[TC[TS]\n",
-      "DEBUG: Player J draws [AS[2S]\n",
-      "DEBUG: Player J discards *R leaving [2S[5D[5D[8C[8S[AS[AD[JC[JC[TC[TS]\n",
-      "DEBUG: Player J draws [8C[7H]\n",
-      "DEBUG: Player J lays down [8C[8S[8C]\n",
-      "DEBUG: Player J discards 2S leaving [5D[5D[7H[AS[AD[JC[JC[TC[TS]\n",
-      "DEBUG: Player J draws [2C[4C]\n",
-      "DEBUG: Player J lays down [4C]\n",
-      "DEBUG: Player J discards 2C leaving [5D[5D[7H[AS[AD[JC[JC[TC[TS]\n"
+      "DEBUG: Player J discards AS leaving [JS[TS[TD]\n"
      ]
     },
     {
@@ -113,13 +103,53 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [2S[3D[4H[5D[6C[7C[JC[JC[QH[TD[TH]\n",
-      "foot: [B3] (11)\n",
+      "hand: [*R[2S[2D[2S[4S[8S[8D[8C[9H[KD[QH]\n",
+      "foot: [R2] (11)\n",
       "J:\n",
-      "complete: \n",
-      "down: [6C[6C[6S]  [9D[9H[9H[9D]  [TD[TH[TD[TD[TH]  [4C[4S[4S[4C]  [3C[3S[3C]  [8C[8S[8C]\n",
-      "hand: [5D[5D[7H[AS[AD[JC[JC[TC[TS]\n",
-      "foot: [B3] (11)\n"
+      "complete: [7S] (7)\n",
+      "down: [2S[2D[2S]  [8S[8D[8C[8C]  [9H[9C[9D[9S]  [Empty]\n",
+      "hand: [JC[JS[KD[KC[KS[TS[TD]\n",
+      "foot: [R2] (11)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG: Player J draws [9H[8S]\n",
+      "DEBUG: Player J lays down [8S]\n",
+      "DEBUG: Player J lays down [9H]\n",
+      "DEBUG: Player J discards JS leaving [TS[TD]\n",
+      "DEBUG: Player J draws [AD[8S]\n",
+      "DEBUG: Player J lays down [8S]\n",
+      "DEBUG: Player J discards AD leaving [TS[TD]\n",
+      "DEBUG: Player J draws [5D[5H]\n",
+      "DEBUG: Player J discards 5D leaving [5H[TS[TD]\n",
+      "DEBUG: Player J draws [5C[5C]\n",
+      "DEBUG: Player J lays down [5H[5C[5C]\n",
+      "DEBUG: Player J discards TS leaving [TD]\n",
+      "DEBUG: Player J draws [QC[4D]\n",
+      "DEBUG: Player J discards 4D leaving [QC[TD]\n",
+      "DEBUG: Player J draws [6H[7C]\n",
+      "DEBUG: Player J lays down [7C]\n",
+      "DEBUG: Player J added [7C] to a pile\n",
+      "DEBUG: Player J discards 6H leaving [QC[TD]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J:\n",
+      "complete: [7C] (8)\n",
+      "down: [2S[2D[2S]  [8S[8D[8C[8C[8S[8S]  [9H[9C[9D[9S[9D[9H]  [KD[KC[KS]  [5H[5C[5C]  [Empty]\n",
+      "hand: [6H[QC[TD]\n",
+      "foot: [R2] (11)\n",
+      "J:\n",
+      "complete: [7C] (8)\n",
+      "down: [2S[2D[2S]  [8S[8D[8C[8C[8S[8S]  [9H[9C[9D[9S[9D[9H]  [KD[KC[KS]  [5H[5C[5C]\n",
+      "hand: [QC[TD]\n",
+      "foot: [R2] (11)\n"
      ]
     }
    ],
@@ -132,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +186,7 @@
        "    border-radius: 5px; \n",
        "    border: solid 1px black;\n",
        "    width: 70px;\n",
-       "}</style><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_spades.png\"></span>"
+       "}</style><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -168,7 +198,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"><span style=\"background:white;color:RED\">🃅</span><span style=\"background:white;color:RED\">🃅</span><span style=\"background:white;color:RED\">🂷</span><span style=\"background:white;color:BLACK\">🂡</span><span style=\"background:white;color:RED\">🃁</span><span style=\"background:white;color:BLACK\">🃛</span><span style=\"background:white;color:BLACK\">🃛</span><span style=\"background:white;color:BLACK\">🃚</span><span style=\"background:white;color:BLACK\">🂪</span></span>"
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🃝</span><span style=\"background:white;color:RED\">🃊</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -181,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5D[5D[7H[AS[AD[JC[JC[TC[TS]\n"
+      "[QC[TD]\n"
      ]
     }
    ],
@@ -210,51 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style=\"display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\" width=70></span><span style=\"position: relative; left: -50px; display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\" width=70></span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<span style=\"display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\" width=70></span><span style=\"position: relative; left: -50px; display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\" width=70></span>\n"
-     ]
-    }
-   ],
-   "source": [
-    "s = '<span style=\"display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\" width=70></span>'\n",
-    "s += '<span style=\"position: relative; left: -50px; display:inline-block; background-color:white; border-radius: 5px; border: solid 1px black\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\" width=70></span>'\n",
-    "display(HTML(s))\n",
-    "#from IPython.display import Image\n",
-    "#Image(filename='handnfoot/pcassets/png/ace_of_spades.png') \n",
-    "print(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_31380\\3295603127.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -269,7 +257,7 @@
        "    width: 70px;\n",
        "    overflow-x: hidden;\n",
        "}\n",
-       "</style><span class=\"pile\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/ace_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_spades.png\"></span></span>"
+       "</style><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_diamonds.png\"></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -293,10 +281,10 @@
     "    overflow-x: hidden;\n",
     "}\n",
     "</style>\"\"\"\n",
-    "s += '<span class=\"pile\">'\n",
+    "#s += '<span class=\"pile\">'\n",
     "for card in g.players[0].get_hand().cards:\n",
     "    s += (card.get_HTML())\n",
-    "s += '</span>'\n",
+    "#s += '</span>'\n",
     "#display(HTML('<span style=\"font-size:90px; background-color:white;\">'+s+'</span>'))\n",
     "display(HTML(s))\n",
     "#print(s)"
@@ -311,9 +299,6 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "19a9f3a328b7b902e0eae633e158192ee891b3df3ec227fc90fdd38d2cdb5a0b"
-  },
   "kernelspec": {
    "display_name": "Python 3.10.0 64-bit",
    "language": "python",
@@ -329,9 +314,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ab65a6a126614c4d8a09c3bb162b3d2e4f4a949753c6f0f735c7c1fe269df83b"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
