--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[B1] (32)\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "from handnfoot import cardtable\n",
@@ -13,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,39 +48,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [5D[AD]\n",
-      "DEBUG: Player J discards 3D leaving [2D[2H[4C[5D[6S[7C[9D[9C[AD[JH[KH[TH]\n",
-      "DEBUG: Player J draws [*B[2H]\n",
-      "DEBUG: Player J lays down [2D[2H[2H]\n",
-      "DEBUG: Player J discards *B leaving [4C[5D[6S[7C[9D[9C[AD[JH[KH[TH]\n",
-      "DEBUG: Player J draws [JD[*B]\n",
-      "DEBUG: Player J discards *B leaving [4C[5D[6S[7C[9D[9C[AD[JH[JD[KH[TH]\n",
-      "DEBUG: Player J draws [9S[9D]\n",
-      "DEBUG: Player J lays down [9D[9C[9S[9D]\n",
-      "DEBUG: Player J discards 4C leaving [5D[6S[7C[AD[JH[JD[KH[TH]\n",
-      "DEBUG: Player J draws [AC[5D]\n",
-      "DEBUG: Player J discards 6S leaving [5D[5D[7C[AD[AC[JH[JD[KH[TH]\n",
-      "DEBUG: Player J draws [5H[4H]\n",
-      "DEBUG: Player J lays down [5D[5D[5H]\n",
-      "DEBUG: Player J discards 4H leaving [7C[AD[AC[JH[JD[KH[TH]\n",
-      "DEBUG: Player J draws [6H[9S]\n",
-      "DEBUG: Player J lays down [9S]\n",
-      "DEBUG: Player J discards 6H leaving [7C[AD[AC[JH[JD[KH[TH]\n",
-      "DEBUG: Player J draws [QS[*R]\n",
-      "DEBUG: Player J discards *R leaving [7C[AD[AC[JH[JD[KH[QS[TH]\n",
-      "DEBUG: Player J draws [4C[2H]\n",
-      "DEBUG: Player J lays down [2H]\n",
-      "DEBUG: Player J discards 4C leaving [7C[AD[AC[JH[JD[KH[QS[TH]\n",
-      "DEBUG: Player J draws [AC[AS]\n",
-      "DEBUG: Player J lays down [AD[AC[AC[AS]\n",
-      "DEBUG: Player J discards 7C leaving [JH[JD[KH[QS[TH]\n"
+      "DEBUG: Player J draws [6H[4D]\n",
+      "DEBUG: Player J lays down [4D]\n",
+      "DEBUG: Player J added [4D[4S[4C[4C[4C[4S[4D] to a pile\n",
+      "DEBUG: Player J discards 6H leaving [JD]\n"
      ]
     },
     {
@@ -81,27 +67,32 @@
      "text": [
       "J:\n",
       "complete: \n",
-      "down: \n",
-      "hand: [2D[2H[3D[4C[6S[7C[9D[9C[JH[KH[TH]\n",
-      "foot: [B21] (11)\n",
+      "down: [2H[2S[2D[2D]  [3C[3H[3C[3S[3D]  [4D[4S[4C[4C[4C[4S]  [TH[TS[TC[TH[TC]  [5S[5S[5D]  [KS[KC[KS]  [AC[AS[AD]\n",
+      "hand: [JD]\n",
+      "foot: [R2] (11)\n",
       "J:\n",
-      "complete: \n",
-      "down: [2D[2H[2H[2H]  [9D[9C[9S[9D[9S]  [5D[5D[5H]  [AD[AC[AC[AS]\n",
-      "hand: [JH[JD[KH[QS[TH]\n",
-      "foot: [B21] (11)\n"
+      "complete: [4D] (7)\n",
+      "down: [2H[2S[2D[2D]  [3C[3H[3C[3S[3D]  [Empty]  [TH[TS[TC[TH[TC]  [5S[5S[5D]  [KS[KC[KS]  [AC[AS[AD]\n",
+      "hand: [6H[JD]\n",
+      "foot: [R2] (11)\n",
+      "J:\n",
+      "complete: [4D] (7)\n",
+      "down: [2H[2S[2D[2D]  [3C[3H[3C[3S[3D]  [TH[TS[TC[TH[TC]  [5S[5S[5D]  [KS[KC[KS]  [AC[AS[AD]\n",
+      "hand: [JD]\n",
+      "foot: [R2] (11)\n"
      ]
     }
    ],
    "source": [
     "g.players[0].display()\n",
-    "for i in range(10):\n",
+    "for i in range(1):\n",
     "    g.play_turn(player = g.players[0])\n",
     "g.players[0].display()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +120,7 @@
        "    max-width: 70px;\n",
        "    height: 102px;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/3_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/3_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/4_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_spades.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -141,7 +132,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"><span style=\"background:white;color:RED\">🂻</span><span style=\"background:white;color:RED\">🃋</span><span style=\"background:white;color:RED\">🂾</span><span style=\"background:white;color:BLACK\">🂭</span><span style=\"background:white;color:RED\">🂺</span></span>"
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:RED\">🂲</span><span style=\"background:white;color:BLACK\">🂢</span><span style=\"background:white;color:BLACK\">🃓</span><span style=\"background:white;color:RED\">🂳</span><span style=\"background:white;color:RED\">🃄</span><span style=\"background:white;color:BLACK\">🃕</span><span style=\"background:white;color:BLACK\">🃗</span><span style=\"background:white;color:BLACK\">🃗</span><span style=\"background:white;color:RED\">🂻</span><span style=\"background:white;color:BLACK\">🃝</span><span style=\"background:white;color:RED\">🂺</span><span style=\"background:white;color:BLACK\">🂪</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -154,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[JH[JD[KH[QS[TH]\n"
+      "[2H[2S[3C[3H[4D[5C[7C[7C[JH[QC[TH[TS]\n"
      ]
     }
    ],
@@ -183,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +191,7 @@
        "    width: 70px;\n",
        "    overflow-x: hidden;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/king_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/3_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/3_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/4_of_diamonds.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/5_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/10_of_spades.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
