--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[B1] (32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "from handnfoot import cardtable\n",
@@ -21,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -48,22 +40,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [JH[6S]\n",
-      "DEBUG: Player J lays down [JH]\n",
-      "DEBUG: Player J added [JD[JD[JD[JD[JH[JS[JH] to a pile\n",
-      "DEBUG: Player J discards 7D leaving [6C[6S]\n",
-      "DEBUG: Player J draws [6D[9H]\n",
-      "DEBUG: Player J lays down [6C[6S[6D]\n",
-      "DEBUG: Player J lays down [9H]\n",
-      "DEBUG: Player J added [9H] to a pile\n",
-      "DEBUG: Player J ends the round!\n"
+      "DEBUG: Player J draws [5D[2D]\n",
+      "DEBUG: Player J discards 2D leaving [4C[4D[5H[5D[6S[7C[AH[JC[JS[KD[KH[TD]\n",
+      "DEBUG: Player J draws [5H[QH]\n",
+      "DEBUG: Player J discards 6S leaving [4C[4D[5H[5D[5H[7C[AH[JC[JS[KD[KH[QH[TD]\n",
+      "DEBUG: Player J draws [QD[TH]\n",
+      "DEBUG: Player J discards 7C leaving [4C[4D[5H[5D[5H[AH[JC[JS[KD[KH[QH[QD[TD[TH]\n",
+      "DEBUG: Player J draws [TD[7S]\n",
+      "DEBUG: Player J discards 7S leaving [4C[4D[5H[5D[5H[AH[JC[JS[KD[KH[QH[QD[TD[TH[TD]\n",
+      "DEBUG: Player J draws [8C[6C]\n",
+      "DEBUG: Player J discards 6C leaving [4C[4D[5H[5D[5H[8C[AH[JC[JS[KD[KH[QH[QD[TD[TH[TD]\n",
+      "DEBUG: Player J draws [TS[3H]\n",
+      "DEBUG: Player J lays down [5H[5D[5H]\n",
+      "DEBUG: Player J lays down [TD[TH[TD[TS]\n",
+      "DEBUG: Player J discards 3H leaving [4C[4D[8C[AH[JC[JS[KD[KH[QH[QD]\n",
+      "DEBUG: Player J draws [6S[4S]\n",
+      "DEBUG: Player J lays down [4C[4D[4S]\n",
+      "DEBUG: Player J discards 6S leaving [8C[AH[JC[JS[KD[KH[QH[QD]\n",
+      "DEBUG: Player J draws [7C[7S]\n",
+      "DEBUG: Player J discards 8C leaving [7C[7S[AH[JC[JS[KD[KH[QH[QD]\n",
+      "DEBUG: Player J draws [6S[6D]\n",
+      "DEBUG: Player J discards AH leaving [6S[6D[7C[7S[JC[JS[KD[KH[QH[QD]\n",
+      "DEBUG: Player J draws [6S[KC]\n",
+      "DEBUG: Player J lays down [6S[6D[6S]\n",
+      "DEBUG: Player J lays down [KD[KH[KC]\n",
+      "DEBUG: Player J discards 7C leaving [7S[JC[JS[QH[QD]\n"
      ]
     },
     {
@@ -71,15 +79,15 @@
      "output_type": "stream",
      "text": [
       "J:\n",
-      "complete: [AD] (10)  [9C] (8)\n",
-      "down: [JD[JD[JD[JD[JH[JS]  [TH[TC[TH[TH[TH[TS]  [*R[*R[*B[*B[*R]  [5H[5D[5H[5S[5H]  [KH[KS[KD[KC]  [8S[8C[8H[8D[8H[8D]\n",
-      "hand: [6C[7D]\n",
-      "foot: [Empty\n",
+      "complete: \n",
+      "down: \n",
+      "hand: [4C[4D[5H[6S[7C[AH[JC[JS[KD[KH[TD]\n",
+      "foot: [R4] (11)\n",
       "J:\n",
-      "complete: [AD] (10)  [9H] (9)  [JH] (7)\n",
-      "down: [TH[TC[TH[TH[TH[TS]  [*R[*R[*B[*B[*R]  [5H[5D[5H[5S[5H]  [KH[KS[KD[KC]  [8S[8C[8H[8D[8H[8D]  [6C[6S[6D]\n",
-      "hand: [Empty]\n",
-      "foot: [Empty\n"
+      "complete: \n",
+      "down: [5H[5D[5H]  [TD[TH[TD[TS]  [4C[4D[4S]  [6S[6D[6S]  [KD[KH[KC]\n",
+      "hand: [7S[JC[JS[QH[QD]\n",
+      "foot: [R4] (11)\n"
      ]
     }
    ],
@@ -94,22 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style>\n",
-       ".cardtable_hand {\n",
-       "    padding-right: 50px; /* Leave room for last card overflow */\n",
-       "    overflow: visible;\n",
-       "}\n",
-       "\n",
-       ".cardtable_hand .cardtable_card {\n",
-       "    width: 20px;\n",
-       "    overflow: visible;\n",
-       "}\n",
        "\n",
        ".cardtable_card {\n",
        "    display: inline-block;\n",
@@ -122,7 +121,32 @@
        "    max-width: 70px;\n",
        "    height: 102px;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_spades.png\"></span></span>"
+       "\n",
+       ".cardtable_hand {\n",
+       "    display: inline-block;\n",
+       "    height: 102px;\n",
+       "    padding-right: 50px; /* Leave room for last card overflow */\n",
+       "    overflow: visible;\n",
+       "}\n",
+       "\n",
+       ".cardtable_hand .cardtable_card {\n",
+       "    width: 20px;\n",
+       "    overflow: visible;\n",
+       "}\n",
+       "\n",
+       ".cardtable_fan_vertical {\n",
+       "    display: inline-block;\n",
+       "    width: 70px;\n",
+       "    padding-bottom: 82px; /* Leave room for last card overflow */\n",
+       "    overflow: visible;\n",
+       "}\n",
+       "\n",
+       ".cardtable_fan_vertical .cardtable_card {\n",
+       "    display: block;\n",
+       "    height: 20px;\n",
+       "    overflow: visible;\n",
+       "}\n",
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -134,7 +158,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🂢</span></span>"
+       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🂧</span><span style=\"background:white;color:BLACK\">🃛</span><span style=\"background:white;color:BLACK\">🂫</span><span style=\"background:white;color:RED\">🂽</span><span style=\"background:white;color:RED\">🃍</span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -147,7 +171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2S]\n"
+      "[7S[JC[JS[QH[QD]\n"
      ]
     }
    ],
@@ -176,9 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_10320\\169516705.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -193,7 +225,7 @@
        "    width: 70px;\n",
        "    overflow-x: hidden;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/2_of_spades.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -251,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4,
   "vscode": {
