--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -40,38 +40,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [5D[2D]\n",
-      "DEBUG: Player J discards 2D leaving [4C[4D[5H[5D[6S[7C[AH[JC[JS[KD[KH[TD]\n",
-      "DEBUG: Player J draws [5H[QH]\n",
-      "DEBUG: Player J discards 6S leaving [4C[4D[5H[5D[5H[7C[AH[JC[JS[KD[KH[QH[TD]\n",
-      "DEBUG: Player J draws [QD[TH]\n",
-      "DEBUG: Player J discards 7C leaving [4C[4D[5H[5D[5H[AH[JC[JS[KD[KH[QH[QD[TD[TH]\n",
-      "DEBUG: Player J draws [TD[7S]\n",
-      "DEBUG: Player J discards 7S leaving [4C[4D[5H[5D[5H[AH[JC[JS[KD[KH[QH[QD[TD[TH[TD]\n",
-      "DEBUG: Player J draws [8C[6C]\n",
-      "DEBUG: Player J discards 6C leaving [4C[4D[5H[5D[5H[8C[AH[JC[JS[KD[KH[QH[QD[TD[TH[TD]\n",
-      "DEBUG: Player J draws [TS[3H]\n",
-      "DEBUG: Player J lays down [5H[5D[5H]\n",
-      "DEBUG: Player J lays down [TD[TH[TD[TS]\n",
-      "DEBUG: Player J discards 3H leaving [4C[4D[8C[AH[JC[JS[KD[KH[QH[QD]\n",
-      "DEBUG: Player J draws [6S[4S]\n",
-      "DEBUG: Player J lays down [4C[4D[4S]\n",
-      "DEBUG: Player J discards 6S leaving [8C[AH[JC[JS[KD[KH[QH[QD]\n",
+      "DEBUG: Player J draws [TS[TC]\n",
+      "DEBUG: Player J lays down [TD[TS[TC] of type T\n",
+      "DEBUG: Player J discards 6C leaving [2H[2H[7D[7S[8D[8C[AS[AC[JH]\n",
       "DEBUG: Player J draws [7C[7S]\n",
-      "DEBUG: Player J discards 8C leaving [7C[7S[AH[JC[JS[KD[KH[QH[QD]\n",
-      "DEBUG: Player J draws [6S[6D]\n",
-      "DEBUG: Player J discards AH leaving [6S[6D[7C[7S[JC[JS[KD[KH[QH[QD]\n",
-      "DEBUG: Player J draws [6S[KC]\n",
-      "DEBUG: Player J lays down [6S[6D[6S]\n",
-      "DEBUG: Player J lays down [KD[KH[KC]\n",
-      "DEBUG: Player J discards 7C leaving [7S[JC[JS[QH[QD]\n"
+      "DEBUG: Player J lays down [7D[7S[7C[7S] of type 7\n",
+      "DEBUG: Player J laying down with wilds.\n",
+      "DEBUG: Player J lays down [8D[8C[2H] of type 8\n",
+      "DEBUG: Player J lays down [AS[AC[2H] of type A\n",
+      "DEBUG: Player J discards JH leaving [Empty]\n",
+      "DEBUG: Player J picks up their foot.\n",
+      "DEBUG: Player J draws [7D[9H]\n",
+      "DEBUG: Player J lays down [5D[5H[5H] of type 5\n",
+      "DEBUG: Player J lays down [7D] of type 7\n",
+      "DEBUG: Player J lays down [TS] of type T\n",
+      "DEBUG: Player J discards 6D leaving [*R[*B[2S[2C[9H[KH[KS]\n",
+      "DEBUG: Player J draws [5H[4D]\n",
+      "DEBUG: Player J lays down [5H] of type 5\n",
+      "DEBUG: Player J discards 4D leaving [*R[*B[2S[2C[9H[KH[KS]\n",
+      "DEBUG: Player J draws [8S[AC]\n",
+      "DEBUG: Player J lays down [8S] of type 8\n",
+      "DEBUG: Player J lays down [AC] of type A\n",
+      "DEBUG: Player J laying down with wilds.\n",
+      "DEBUG: Player J lays down [KH[KS[2C] of type K\n",
+      "DEBUG: Player J adding wilds.\n",
+      "DEBUG: Player J lays down card [2S] of type 8\n",
+      "DEBUG: Player J lays down card [*B] of type 8\n",
+      "DEBUG: Player J lays down card [*R] of type A\n",
+      "DEBUG: Player J discards 9H leaving [Empty]\n",
+      "DEBUG: Player J ends the round!\n"
      ]
     },
     {
@@ -81,13 +85,13 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [4C[4D[5H[6S[7C[AH[JC[JS[KD[KH[TD]\n",
-      "foot: [R4] (11)\n",
+      "hand: [2H[2H[6C[7D[7S[8D[8C[AS[AC[JH[TD]\n",
+      "foot: [R13] (11)\n",
       "J:\n",
       "complete: \n",
-      "down: [5H[5D[5H]  [TD[TH[TD[TS]  [4C[4D[4S]  [6S[6D[6S]  [KD[KH[KC]\n",
-      "hand: [7S[JC[JS[QH[QD]\n",
-      "foot: [R4] (11)\n"
+      "down: [TD[TS[TC[TS]  [7D[7S[7C[7S[7D]  [8D[8C[2H[8S[2S[*B]  [AS[AC[2H[AC[*R]  [5D[5H[5H[5H]  [KH[KS[2C]\n",
+      "hand: [Empty]\n",
+      "foot: [Empty\n"
      ]
     }
    ],
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +150,7 @@
        "    height: 20px;\n",
        "    overflow: visible;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -158,7 +162,7 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"font-size: 70px\"><span style=\"background:white;color:BLACK\">🂧</span><span style=\"background:white;color:BLACK\">🃛</span><span style=\"background:white;color:BLACK\">🂫</span><span style=\"background:white;color:RED\">🂽</span><span style=\"background:white;color:RED\">🃍</span></span>"
+       "<span style=\"font-size: 70px\"></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -171,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7S[JC[JS[QH[QD]\n"
+      "[Empty]\n"
      ]
     }
    ],
@@ -200,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_10320\\169516705.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_9424\\169516705.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -225,7 +229,7 @@
        "    width: 70px;\n",
        "    overflow-x: hidden;\n",
        "}\n",
-       "</style><span class=\"cardtable_hand\"><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/7_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_clubs.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/jack_of_spades.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_hearts.png\"></span><span class=\"cardtable_card\"><img src=\"handnfoot/pcassets/png/queen_of_diamonds.png\"></span></span>"
+       "</style><span class=\"cardtable_hand\"></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -257,6 +261,27 @@
     "#display(HTML('<span style=\"font-size:90px; background-color:white;\">'+s+'</span>'))\n",
     "display(HTML(s))\n",
     "#print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[TWO!, JOKER!]\n",
+      "1\n",
+      "<class 'handnfoot.cardtable.Modifiers'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(handnfoot.cardtable.Modifiers.wild_ranks))\n",
+    "print(str(handnfoot.cardtable.Modifiers.meld_method))\n",
+    "print(handnfoot.cardtable.Modifiers)"
    ]
   },
   {
