--- a/handnfoot.ipynb
+++ b/handnfoot.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import logging\n",
+    "import sys \n",
+    "sys.path.append(\".\")\n",
     "from handnfoot import cardtable\n",
     "from handnfoot import handnfoot\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -40,41 +42,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG: Player J draws [TS[TC]\n",
-      "DEBUG: Player J lays down [TD[TS[TC] of type T\n",
-      "DEBUG: Player J discards 6C leaving [2H[2H[7D[7S[8D[8C[AS[AC[JH]\n",
-      "DEBUG: Player J draws [7C[7S]\n",
-      "DEBUG: Player J lays down [7D[7S[7C[7S] of type 7\n",
-      "DEBUG: Player J laying down with wilds.\n",
-      "DEBUG: Player J lays down [8D[8C[2H] of type 8\n",
-      "DEBUG: Player J lays down [AS[AC[2H] of type A\n",
-      "DEBUG: Player J discards JH leaving [Empty]\n",
-      "DEBUG: Player J picks up their foot.\n",
-      "DEBUG: Player J draws [7D[9H]\n",
-      "DEBUG: Player J lays down [5D[5H[5H] of type 5\n",
-      "DEBUG: Player J lays down [7D] of type 7\n",
-      "DEBUG: Player J lays down [TS] of type T\n",
-      "DEBUG: Player J discards 6D leaving [*R[*B[2S[2C[9H[KH[KS]\n",
-      "DEBUG: Player J draws [5H[4D]\n",
-      "DEBUG: Player J lays down [5H] of type 5\n",
-      "DEBUG: Player J discards 4D leaving [*R[*B[2S[2C[9H[KH[KS]\n",
-      "DEBUG: Player J draws [8S[AC]\n",
-      "DEBUG: Player J lays down [8S] of type 8\n",
+      "DEBUG: Player J draws [KC[KH]\n",
+      "DEBUG: Player J lays down [9S[9D[9H] of type 9\n",
+      "DEBUG: Player J discards 5C leaving [7D[7H[8S[AD[AH[KC[KH[QH[QD]\n",
+      "DEBUG: Player J draws [4C[QC]\n",
+      "DEBUG: Player J lays down [QH[QD[QC] of type Q\n",
+      "DEBUG: Player J discards 4C leaving [7D[7H[8S[AD[AH[KC[KH]\n",
+      "DEBUG: Player J draws [4H[4S]\n",
+      "DEBUG: Player J discards 8S leaving [4H[4S[7D[7H[AD[AH[KC[KH]\n",
+      "DEBUG: Player J draws [7C[8H]\n",
+      "DEBUG: Player J lays down [7D[7H[7C] of type 7\n",
+      "DEBUG: Player J discards 8H leaving [4H[4S[AD[AH[KC[KH]\n",
+      "DEBUG: Player J draws [AH[8S]\n",
+      "DEBUG: Player J lays down [AD[AH[AH] of type A\n",
+      "DEBUG: Player J discards 8S leaving [4H[4S[KC[KH]\n",
+      "DEBUG: Player J draws [8D[8H]\n",
+      "DEBUG: Player J discards 4H leaving [4S[8D[8H[KC[KH]\n",
+      "DEBUG: Player J draws [AC[7C]\n",
+      "DEBUG: Player J lays down [7C] of type 7\n",
       "DEBUG: Player J lays down [AC] of type A\n",
+      "DEBUG: Player J discards 4S leaving [8D[8H[KC[KH]\n",
+      "DEBUG: Player J draws [*R[3C]\n",
+      "DEBUG: Player J discards *R leaving [3C[8D[8H[KC[KH]\n",
+      "DEBUG: Player J draws [KC[AD]\n",
+      "DEBUG: Player J lays down [AD] of type A\n",
+      "DEBUG: Player J lays down [KC[KH[KC] of type K\n",
+      "DEBUG: Player J discards 3C leaving [8D[8H]\n",
+      "DEBUG: Player J draws [AH[8S]\n",
+      "DEBUG: Player J lays down [8D[8H[8S] of type 8\n",
+      "DEBUG: Player J lays down [AH] of type A\n",
+      "DEBUG: Player J picks up their foot and keeps playing!\n",
+      "DEBUG: Player J lays down [8C[8C] of type 8\n",
+      "DEBUG: Player J lays down [9C[9S] of type 9\n",
+      "DEBUG: Player J lays down [AS[AC] of type A\n",
+      "DEBUG: Player J added [AD[AH[AH[AC[AD[AH[AS[AC] to a pile\n",
+      "DEBUG: Player J lays down [QS] of type Q\n",
       "DEBUG: Player J laying down with wilds.\n",
-      "DEBUG: Player J lays down [KH[KS[2C] of type K\n",
-      "DEBUG: Player J adding wilds.\n",
-      "DEBUG: Player J lays down card [2S] of type 8\n",
-      "DEBUG: Player J lays down card [*B] of type 8\n",
-      "DEBUG: Player J lays down card [*R] of type A\n",
-      "DEBUG: Player J discards 9H leaving [Empty]\n",
+      "DEBUG: Player J lays down [TD[TC[*R] of type T\n",
+      "DEBUG: Player J discards 5C leaving [Empty]\n",
       "DEBUG: Player J ends the round!\n"
      ]
     },
@@ -85,11 +97,11 @@
       "J:\n",
       "complete: \n",
       "down: \n",
-      "hand: [2H[2H[6C[7D[7S[8D[8C[AS[AC[JH[TD]\n",
-      "foot: [R13] (11)\n",
+      "hand: [5C[7D[7H[8S[9S[9D[9H[AD[AH[QH[QD]\n",
+      "foot: [B2] (11)\n",
       "J:\n",
-      "complete: \n",
-      "down: [TD[TS[TC[TS]  [7D[7S[7C[7S[7D]  [8D[8C[2H[8S[2S[*B]  [AS[AC[2H[AC[*R]  [5D[5H[5H[5H]  [KH[KS[2C]\n",
+      "complete: [AC] (8)\n",
+      "down: [9S[9D[9H[9C[9S]  [QH[QD[QC[QS]  [7D[7H[7C[7C]  [KC[KH[KC]  [8D[8H[8S[8C[8C]  [TD[TC[*R]\n",
       "hand: [Empty]\n",
       "foot: [Empty\n"
      ]
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -204,39 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_9424\\169516705.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
-      "  from IPython.core.display import display, HTML\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'display' from 'IPython.core.display' (C:\\Users\\steve\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\display.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mIPython\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcore\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdisplay\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m display, HTML\n\u001b[32m      2\u001b[39m s = \u001b[33m\"\"\"\u001b[39m\u001b[33m<style>\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m.pile \u001b[39m\u001b[33m{\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[33m    xdisplay: grid;\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     12\u001b[39m \u001b[33m}\u001b[39m\n\u001b[32m     13\u001b[39m \u001b[33m</style>\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#s += '<span class=\"pile\">'\u001b[39;00m\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m#for card in g.players[0].get_hand().cards:\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[38;5;66;03m#    s += (card.get_HTML())\u001b[39;00m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m#s += '</span>'\u001b[39;00m\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'display' from 'IPython.core.display' (C:\\Users\\steve\\AppData\\Roaming\\Python\\Python313\\site-packages\\IPython\\core\\display.py)"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".pile {\n",
-       "    xdisplay: grid;\n",
-       "    xgrid-auto-flow: column;\n",
-       "    xgrid-template-column: 15px;\n",
-       "}\n",
-       ".cardtable_card {\n",
-       "    xgrid-row: 1;\n",
-       "    width: 70px;\n",
-       "    overflow-x: hidden;\n",
-       "}\n",
-       "</style><span class=\"cardtable_hand\"></span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -265,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -308,14 +300,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "ab65a6a126614c4d8a09c3bb162b3d2e4f4a949753c6f0f735c7c1fe269df83b"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
